RESOLVED FIXED322873
[Grid Lanes] Explicitly-placed items should not advance the auto-placement cursor
https://bugs.webkit.org/show_bug.cgi?id=322873
Summary [Grid Lanes] Explicitly-placed items should not advance the auto-placement cu...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-08-28 16:08:05 PDT
Sammy Gill
Comment 2 2026-08-28 16:32:27 PDT
EWS
Comment 3 2026-09-01 10:34:24 PDT
Committed 320253@main (90dfd6f5fe81): <https://commits.webkit.org/320253@main> Reviewed commits have been landed. Closing PR #72742 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.