[Grid Lanes] Explicitly-placed items should not advance the auto-placement cursor. https://bugs.webkit.org/show_bug.cgi?id=322873 rdar://problem/186118858

Reviewed by Elika Etemad.

Unlike regular grid, where all explicitly-placed items are positioned before auto-placement
runs, Grid Lanes places items interleaved in order. That raised the question of whether an
explicitly-placed item should move the auto-placement cursor along with it.

The CSSWG resolved this in
https://github.com/w3c/csswg-drafts/issues/13987#issuecomment-5192487721:

    RESOLVED: Remove issue, leave spec as-is (not updating auto-placement cursor with
    explicit placement)

GridLanesLayout was updating m_autoFlowNextCursor from insertIntoGridAndLayoutItem(), which
runs for every item, so explicitly-placed items dragged the cursor along too. Move the
update up into placeGridLanesItems(), which already knows whether the item resolved a
definite grid-axis position, and only advance the cursor for auto-placed items.

* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/item-placement/flow-tolerance/column-fit-tolerance-infinite-explicit-placement-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/item-placement/flow-tolerance/column-fit-tolerance-infinite-explicit-placement-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/item-placement/flow-tolerance/column-fit-tolerance-infinite-explicit-placement.html: Added.
Added some new tests that make sure this behavior is correct when fit-tolerance is infinite.

Canonical link: https://commits.webkit.org/320253@main